css/index.css
#navbar {
    display: flex;
    justify-content: space-between;
}

#search-button {
    vertical-align: bottom;
    cursor: pointer;
}

.icon {
    cursor: pointer;
}

#search-bar {
    width: 30vw;
}

#content {
    display: grid;
    grid-template-columns: 75% 25%;
    grid-template-rows: 25% 25% 25% 25%;
    grid-auto-flow: column;
    background-color: #f9f9f9
}

iframe {
    width: 57vw;
    top: 50%;
    transform: translate( 0%, -50%);
    position: relative;
}

#video-info {
    border-bottom: 1px solid rgb(96, 96 ,96);
    margin-right: 10vw;
    margin-bottom: 20px;
}

#description {
    display: flex;
    justify-content: flex-start;
    margin-right: 10vw;
    border-bottom: 1px solid rgb(96, 96 ,96);
    padding-bottom: 5px;
}

#description-text {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    flex-grow: 2;
}

#description-text > h2, #description-text > h4 {
    margin-bottom: 0px;
    margin-top: 0px;
}

#artist-dp {
    width: 48px;
    height: 48px;
}

#subscribe-button {
    width: 105.433px;
    height: 37px;
    background-color: rgb(204, 0, 0);
    color: rgb(255, 255, 255);
    font-family: sans-serif;
    font-size: 14px;
    border-radius: 5px;
}

#comments-header {
    display: flex;
    flex-direction: row;
}

#comments-header > button {
    background-color: transparent;
    border: none;
    margin-left: 10px;
    font-weight: bold;
    cursor: pointer;
}

#comment-input {
    margin-bottom: 30px;
}

#comment-input > input {
    background-color: transparent;
    border-top: none;
    border-left: none;
    border-right: none;
    width: 80%;
}

#first-comment {
    display: flex;
    flex-direction: row;
}

#first-comment > img {
    width: 40px;
    height: 40px;
}

#recommended-videos {
    grid-column-start: 2;
    grid-column-end: end;
    grid-row-start: 1;
    grid-row-end: end;
}

.comment-user {
    display: flex;
    flex-direction: row;
}

.comment-user > * {
    margin: 5px;
}

img {
    cursor: pointer;
}

h1 {
    font-size: 1.5rem;
}

h4 {
    color: rgb(96, 96, 96);
    font-size: 0.8rem;
}

h1, h3, h4 {
    font-family: Arial, sans-serif;
}

div {
    padding-left: 10px;
}

h3, p {
    font-size: 0.9rem;
}

